--- a/client/crypto-react/package.json
+++ b/client/crypto-react/package.json
@@ -1,4 +1,5 @@
-{   "developer":"RUTAGENGWA Asante Bruce",
+{
+  "developer": "RUTAGENGWA Asante Bruce",
   "name": "personal-portfolio",
   "private": true,
   "version": "0.0.0",
@@ -8,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ethers": "^5.6.9",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
